--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "pdfkit-table": "^0.1.99"
   }
 }
