--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "201": "node initiate-201.js",
     "sop": "node index-sop.js",
     "ques": "node index-question.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +14,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "pdfkit": "^0.15.0",
     "pdfkit-table": "^0.1.99"
   }
